runs/2025-02-28-13-08-23/logs/SCArray.sat/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'SCArray.sat'
also installing the dependency ‘SCArray’

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/SCArray_1.14.0.tar.gz'
Content type 'application/x-gzip' length 1406393 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/SCArray.sat_1.6.0.tar.gz'
Content type 'application/x-gzip' length 670322 bytes (654 KB)
==================================================
downloaded 654 KB

* installing *source* package ‘SCArray’ ...
** package ‘SCArray’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c sc_main.cpp -o sc_main.o
In file included from sc_main.h:25,
                 from sc_main.cpp:20:
sc_main.cpp: In constructor ‘SparseMatrix::SparseMatrix(SEXP)’:
sc_main.cpp:37:33: error: ‘mkString’ was not declared in this scope; did you mean ‘Rf_mkString’?
   37 |         SEXP ii = GET_SLOT(mat, mkString("nzcoo"));
      |                                 ^~~~~~~~
/usr/local/lib/R/include/Rdefines.h:151:46: note: in definition of macro ‘GET_SLOT’
  151 | #define GET_SLOT(x, what)       R_do_slot(x, what)
      |                                              ^~~~
sc_main.cpp: In function ‘void get_mat_size(SEXP, int&, int&)’:
sc_main.cpp:79:41: error: ‘mkString’ was not declared in this scope; did you mean ‘Rf_mkString’?
   79 |                 SEXP dm = GET_SLOT(mat, mkString("dim"));
      |                                         ^~~~~~~~
/usr/local/lib/R/include/Rdefines.h:151:46: note: in definition of macro ‘GET_SLOT’
  151 | #define GET_SLOT(x, what)       R_do_slot(x, what)
      |                                              ^~~~
make: *** [/usr/local/lib/R/etc/Makeconf:204: sc_main.o] Error 1
ERROR: compilation failed for package ‘SCArray’
* removing ‘/mnt/library/SCArray’
ERROR: dependency ‘SCArray’ is not available for package ‘SCArray.sat’
* removing ‘/mnt/library/SCArray.sat’

The downloaded source packages are in
	‘/tmp/Rtmp9vHyPI/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning messages:
1: In install.packages(...) :
  installation of package ‘SCArray’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘SCArray.sat’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	0m35.812s
user	0m10.262s
sys	0m3.351s
